# cmake

./: README.md
topic1/basic/: CMakeLists.txt
topic1/basic/src/: main.cpp
topic1/medium/: CMakeLists.txt
topic1/medium/libmath/: CMakeLists.txt
topic1/medium/libmath/include/: mathlib.h
topic1/medium/libmath/src/: mathlib.cpp
topic1/medium/tests/: CMakeLists.txt  test_main.cpp
topic1/practice/: CMakeLists.txt
topic1/practice/src/: main.cpp  operations.cpp  operations.h
topic2/basic/: CMakeLists.txt
topic2/medium/: CMakeLists.txt  main.cpp
topic2/medium/MathLib/: CMakeLists.txt  math_functions.cpp
topic2/medium/StringLib/: CMakeLists.txt  string_functions.cpp  string_functions.h
topic2/practice/: CMakeLists.txt  main.cpp
topic3/basic/: CMakeLists.txt  main.cpp
topic4/basic/: CMakeLists.txt
topic4/basic/include/: config.h.in
topic4/basic/src/: CMakeLists.txt  main.cpp
topic4/medium/advanced_project/: CMakeLists.txt
topic4/medium/advanced_project/app/: CMakeLists.txt  main.cpp
topic4/medium/advanced_project/config/: ProjectConfig.h.in
topic4/medium/advanced_project/lib/: AdvancedMathOperations.h  CMakeLists.txt
topic4/medium/advanced_project/test/: CMakeLists.txt  main.cpp
topic4/practice/: CMakeLists.txt
topic4/practice/app/: CMakeLists.txt  main.cpp
topic4/practice/lib/: AdvancedMathOperations.cpp  CMakeLists.txt  MathOperations.cpp  MathOperations.h
topic5/basic/: CMakeLists.txt
topic5/basic/mylibrary/: CMakeLists.txt
topic5/basic/mylibrary/include/mylibrary/: math_functions.h
topic5/basic/mylibrary/src/: math_functions.cpp
topic5/medium/: CMakeLists.txt
topic5/medium/advanced_app/: CMakeLists.txt
topic5/medium/advanced_app/src/: main.cpp
topic5/medium/math_utils/: CMakeLists.txt
topic5/medium/math_utils/include/math_utils/: math_operations.h
topic5/medium/math_utils/src/: math_operations.cpp
topic5/medium/string_utils/: CMakeLists.txt
topic5/medium/string_utils/include/string_utils/: string_operations.h
topic5/medium/string_utils/src/: string_operations.cpp
topic5/practice/: CMakeLists.txt
topic5/practice/advanced_library/: CMakeLists.txt  main.cpp
topic5/practice/advanced_library/include/advanced_library/: advanced_math.h
topic5/practice/advanced_library/src/: advanced_math.cpp
topic5/practice/app/: CMakeLists.txt
topic5/practice/app/src/: main.cpp
topic6/basic/: CMakeLists.txt
topic6/basic/src/: CMakeLists.txt
topic6/basic/tests/: CMakeLists.txt  test_main.cpp
topic6/medium/: CMakeLists.txt
topic6/medium/app/: CMakeLists.txt  main.cpp
topic6/medium/lib/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h
topic6/medium/tests/: CMakeLists.txt  main_test.cpp
topic6/practice/: CMakeLists.txt
topic6/practice/src/: CMakeLists.txt  MathFunctions.h  main.cpp
topic6/practice/tests/: CMakeLists.txt  test_main.cpp
topic7/basic/my_app/: CMakeLists.txt  main.cpp
topic7/medium/my_advanced_project/: CMakeLists.txt  config.h.in
topic7/medium/my_advanced_project/src/: AdvancedMathFunctions.cpp  AdvancedMathFunctions.h  CMakeLists.txt  main.cpp
topic7/medium/my_advanced_project/tests/: CMakeLists.txt  test_advanced_math_functions.cpp
topic7/practice/my_advanced_app/: CMakeLists.txt  config.h.in
topic7/practice/my_advanced_app/src/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h  main.cpp
topic8/practice/SumApp/: CMakeLists.txt  config.h.in
topic8/practice/SumApp/src/: main.cpp
