cmake_minimum_required(VERSION 3.15)
project(AdvancedPractice LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(MSVC)
    add_compile_options(/W4)
else()
    add_compile_options(-Wall -Wextra -Wpedantic)
endif()

add_subdirectory(MathLib)
add_subdirectory(StringLib)

add_executable(AdvancedPractice main.cpp)
target_link_libraries(AdvancedPractice MathLib StringLib)
