# Este archivo es utilizado por CMake para configurar y construir el proyecto.
cmake_minimum_required(VERSION 3.10) # Especifica la versión mínima de CMake requerida.

project(HelloWorld) # Define el nombre del proyecto.

add_executable(HelloWorld main.cpp) # Define un ejecutable y sus fuentes asociadas.
